# duramen

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  README.md  clippy.toml  committed.toml  deny.toml  flake.nix  tombi.toml  typos.toml
crates/ast/: Cargo.toml  README.md
crates/ast/src/: common.rs  error.rs  lib.rs  policy.rs  schema.rs
crates/ast/src/common/: annotation.rs  annotations.rs  entity.rs  id.rs  identifier.rs  name.rs
crates/ast/src/policy/: action_constraint.rs  action_list.rs  binary_operator.rs  bool_literal.rs  clause.rs  condition.rs  constraint.rs  effect.rs  entity_or_slot.rs  entity_reference.rs  expr.rs  expression.rs  integer.rs  integer_literal.rs  literal.rs  ops.rs  pattern.rs  pattern_element.rs  policies.rs  policy_set.rs  principal_constraint.rs  record_expression.rs  resource_constraint.rs  scope_constraint.rs  slot.rs  slot_kind.rs  string_literal.rs  template.rs  unary_operator.rs  unknown.rs  var.rs  variable.rs
crates/ast/src/schema/: action_decl.rs  action_declaration.rs  action_reference.rs  applies_to.rs  attribute.rs  attribute_declaration.rs  context_type.rs  declaration.rs  entity_decl.rs  entity_declaration.rs  entity_kind.rs  entity_type_set.rs  enum_choices.rs  enum_type.rs  namespace.rs  optionality.rs  record_type.rs  standard_entity.rs  type_decl.rs  type_declaration.rs  type_expression.rs  types.rs
crates/cst/: Cargo.toml  README.md
crates/cst/src/: accessors.rs  builder.rs  common.rs  index.rs  lib.rs  policy.rs  schema.rs  syntax.rs  tree.rs
crates/cst/src/accessors/: policy.rs  schema.rs
crates/cst/src/common/: annotation.rs  name.rs
crates/cst/src/policy/: addition_operator.rs  and_expression.rs  argument_list.rs  arguments.rs  call.rs  condition.rs  condition_kind.rs  effect.rs  entity_reference.rs  expression.rs  field.rs  field_access.rs  has_expression.rs  if_expression.rs  index.rs  index_access.rs  is_expression.rs  like_expression.rs  list.rs  literal.rs  literal_kind.rs  member_access.rs  member_expression.rs  method_call.rs  multiplication_operator.rs  or_expression.rs  parenthesized.rs  policies.rs  product_expression.rs  product_operator.rs  record.rs  record_entry.rs  relation_expression.rs  relation_operator.rs  relational_operator.rs  scope.rs  slot.rs  slot_kind.rs  sum_expression.rs  sum_operator.rs  (+5 more)
crates/cst/src/schema/: action_attributes.rs  action_declaration.rs  action_parents.rs  applies_to.rs  applies_to_clause.rs  attribute_declaration.rs  context_type.rs  entity_attributes.rs  entity_declaration.rs  entity_parents.rs  entity_tags.rs  entity_type.rs  enum_type.rs  namespace.rs  namespace_declaration.rs  principal_types.rs  record_type.rs  resource_types.rs  set_type.rs  syntax.rs  type_declaration.rs  type_expression.rs  type_list.rs  types.rs
crates/cst/src/syntax/: policy.rs  schema.rs
crates/diagnostic/: Cargo.toml  README.md
crates/diagnostic/benches/: suggest.rs
crates/diagnostic/src/: diagnostic.rs  diagnostics.rs  lib.rs  suggest.rs  suggestion.rs
crates/diagnostics/: Cargo.toml  README.md
crates/diagnostics/src/: lib.rs
crates/escape/: Cargo.toml  README.md
crates/escape/benches/: escape.rs
crates/escape/src/: error.rs  escaper.rs  lib.rs
crates/escape/tests/: escape.rs  upstream.rs
crates/est/: Cargo.toml  README.md
crates/est/benches/: serde_corpus.rs  serde_json_corpus.rs
crates/est/src/: convert.rs  json.rs  lib.rs
crates/est/src/json/: expr.rs  policy.rs  schema.rs  value.rs
crates/est/tests/: serde_json_differential.rs
crates/lexer/: Cargo.toml  README.md
crates/lexer/benches/: throughput.rs
crates/lexer/src/: cursor.rs  error.rs  lexer.rs  lib.rs  lookup.rs  token.rs
crates/lower/: Cargo.toml  README.md
crates/lower/benches/: corpus.rs  unescape.rs
crates/lower/src/: error.rs  lib.rs  policy.rs  schema.rs  unescape.rs
crates/lower/tests/: corpus.rs  upstream_parser_policy.rs  upstream_policy.rs  upstream_schema.rs
crates/lowerer/: Cargo.toml  README.md
crates/lowerer/benches/: corpus.rs
crates/lowerer/src/: common.rs  error.rs  lib.rs  policy.rs  schema.rs
crates/lowerer/tests/: corpus.rs  upstream_parser_policy.rs
crates/lowerer/tests/snapshots/: upstream_parser_policy__comments_policy_2-2.snap  upstream_parser_policy__comments_policy_2.snap  upstream_parser_policy__comments_policy_2_diagnostics.snap  upstream_parser_policy__comments_policy_2_tree.snap  upstream_parser_policy__comments_policy_3-2.snap  upstream_parser_policy__comments_policy_3.snap  upstream_parser_policy__comments_policy_3_diagnostics.snap  upstream_parser_policy__comments_policy_3_tree.snap  upstream_parser_policy__error_recovery_1-2.snap  upstream_parser_policy__error_recovery_1.snap  upstream_parser_policy__error_recovery_1_diagnostics.snap  upstream_parser_policy__error_recovery_1_tree.snap  upstream_parser_policy__error_recovery_2-2.snap  upstream_parser_policy__error_recovery_2.snap  upstream_parser_policy__error_recovery_2_diagnostics.snap  upstream_parser_policy__error_recovery_2_tree.snap  upstream_parser_policy__error_recovery_3.snap  (+129 more)
crates/parser/: Cargo.toml  README.md
crates/parser/benches/: corpus.rs
crates/parser/src/: advance.rs  common.rs  error.rs  lib.rs  policy.rs  schema.rs
crates/parser/tests/: corpus.rs  policy_diagnostics.rs  schema_diagnostics.rs  upstream_policy.rs  upstream_policy_failure.rs
crates/suggest/: Cargo.toml  README.md
crates/suggest/benches/: suggest.rs
crates/suggest/src/: lib.rs
crates/suggest/tests/: suggest.rs
crates/test/: Cargo.toml  README.md
crates/test/src/: lib.rs
crates/validator/: Cargo.toml  README.md
crates/validator/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/dict/: cedar.dict
fuzz/fuzz_targets/: escape.rs  est_serde_json_policy.rs  est_serde_json_schema.rs  lexer.rs  lower.rs  lower_policy.rs  lower_schema.rs  lowerer.rs  parse_policy.rs  parser.rs  policy.rs  policy_arbitrary.rs  policy_prost.rs  schema.rs  schema_arbitrary.rs
xtask/: Cargo.toml
xtask/src/: fixtures.rs  main.rs  prost.rs  ungram.rs
xtask/src/ungram/: policy.rs  schema.rs  shared.rs
(+206 files in other folders)
