# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
resolver = "3"
members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
repository = "https://github.com/DuskSystems/duramen"
license = "Apache-2.0"
keywords = ["cedar", "policy", "authorization"]
categories = ["parser-implementations", "no-std"]

# https://doc.rust-lang.org/rustc/lints/groups.html
[workspace.lints.rust]
unsafe_code = "deny"

unused = { level = "deny", priority = -2 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }

# https://rust-lang.github.io/rust-clippy/master/index.html
[workspace.lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Correctness
expect_used = "deny"
future_not_send = "deny"
non_zero_suggestions = "deny"
panic = "deny"
rest_pat_in_fully_bound_structs = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
wildcard_enum_match_arm = "deny"

# Errors
map_err_ignore = "deny"
try_err = "deny"
unused_result_ok = "deny"

# Performance
string_lit_chars_any = "deny"

# Clarity
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
clone_on_ref_ptr = "deny"
impl_trait_in_params = "deny"
missing_assert_message = "deny"
same_name_method = "deny"
str_to_string = "deny"
unseparated_literal_suffix = "deny"
unused_trait_names = "deny"

# Style
deref_by_slicing = "deny"
mod_module_files = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
return_and_then = "deny"
semicolon_outside_block = "deny"

# Imports
alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
unnecessary_self_imports = "deny"

# Tests
cfg_not_test = "deny"
redundant_test_prefix = "deny"

# Documentation
doc_include_without_cfg = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"

# Debugging
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"

# Relaxed
cognitive_complexity = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
new_without_default = "allow"
should_implement_trait = "allow"
too_many_lines = "allow"
unsafe_derive_deserialize = "allow"

# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "duramen"
description = "A Cedar implementation"
include = ["/src"]
publish = true

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "docs/arborium.html"]
