# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
resolver = "3"
members = [".", "crates/*", "fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
repository = "https://github.com/DuskSystems/duramen"
license = "Apache-2.0"
keywords = ["cedar", "policy", "authorization"]
categories = ["parser-implementations", "no-std"]

# https://doc.rust-lang.org/rustc/lints/groups.html
[workspace.lints.rust]
unsafe_code = "deny"

unused = { level = "deny", priority = -2 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }

# https://rust-lang.github.io/rust-clippy/master/index.html
[workspace.lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Correctness
expect_used = "deny"
fallible_impl_from = "deny"
future_not_send = "deny"
non_zero_suggestions = "deny"
panic = "deny"
rest_pat_in_fully_bound_structs = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

# Errors
map_err_ignore = "deny"
try_err = "deny"
unused_result_ok = "deny"

# Performance
inline_always = "allow"
string_lit_chars_any = "deny"

# Clarity
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
clone_on_ref_ptr = "deny"
impl_trait_in_params = "deny"
missing_assert_message = "deny"
same_name_method = "deny"
str_to_string = "deny"
unseparated_literal_suffix = "deny"
unused_trait_names = "deny"

# Style
deref_by_slicing = "deny"
mod_module_files = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
return_and_then = "deny"
semicolon_outside_block = "deny"

# Imports
alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
unnecessary_self_imports = "deny"

# Tests
cfg_not_test = "deny"
redundant_test_prefix = "deny"

# Documentation
doc_include_without_cfg = "deny"
doc_paragraphs_missing_punctuation = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"

# Debugging
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"

# Relaxed
cognitive_complexity = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
new_without_default = "allow"
should_implement_trait = "allow"
too_many_lines = "allow"
unsafe_derive_deserialize = "allow"

[workspace.dependencies]
duramen-ast = { path = "crates/ast", default-features = false }
duramen-cst = { path = "crates/cst", default-features = false }
duramen-diagnostics = { path = "crates/diagnostics", default-features = false }
duramen-est = { path = "crates/est", default-features = false }
duramen-lexer = { path = "crates/lexer", default-features = false }
duramen-lower = { path = "crates/lower", default-features = false }
duramen-parser = { path = "crates/parser", default-features = false }
duramen-test = { path = "crates/test", default-features = false }
duramen-validator = { path = "crates/validator", default-features = false }

# Upstream
cedar-policy = { version = "=4.8.2", default-features = false }

# CST
syntree = { version = "0.18", default-features = false }

# SIMD
memchr = { version = "2.7", default-features = false }

# Diagnostics
# FIXME: https://github.com/rust-lang/annotate-snippets-rs/issues/359
annotate-snippets = { git = "https://github.com/CathalMullan/annotate-snippets-rs", branch = "main", default-features = false }
anstream = { version = "0.6", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
prost = { version = "0.14", default-features = false }

# RNG
rand = { version = "0.9", default-features = false, features = ["small_rng"] }

# Filesystem
walkdir = { version = "2.5", default-features = false }

# Testing
insta = { version = "1.46", default-features = false }
datatest-stable = { version = "0.3", default-features = false }
similar-asserts = { version = "1.7", default-features = false }

# Benchmarking
divan = { package = "codspeed-divan-compat", version = "4.3", default-features = false }

# Fuzzing
arbitrary = { version = "1.4", default-features = false }
libfuzzer-sys = { version = "0.4", default-features = false }

# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "duramen"
description = "A Cedar implementation"
include = ["/src"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []
serde = ["duramen-est/serde"]

[dependencies]
duramen-ast = { workspace = true }
duramen-cst = { workspace = true }
duramen-diagnostics = { workspace = true }
duramen-est = { workspace = true }
duramen-lexer = { workspace = true }
duramen-lower = { workspace = true }
duramen-parser = { workspace = true }
duramen-validator = { workspace = true }

[dev-dependencies]
duramen-test = { workspace = true }

# Upstream
cedar-policy = { workspace = true }

# Serialization
serde_json = { workspace = true, features = ["std"] }

# Benchmarking
divan = { workspace = true }

[[bench]]
name = "e2e_serde"
harness = false
required-features = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "docs/arborium.html"]
