[package]
name = "duramen-fuzz"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
duramen-ast = { path = "../crates/ast" }
duramen-est = { path = "../crates/est", features = ["serde"] }
duramen-lexer = { path = "../crates/lexer" }
duramen-lower = { path = "../crates/lower" }
duramen-parser = { path = "../crates/parser" }
duramen-test = { path = "../crates/test" }

# Upstream
cedar-policy = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Fuzzing
libfuzzer-sys = { workspace = true, features = ["link_libfuzzer"] }

[[bin]]
name = "lexer"
path = "fuzz_targets/lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lower_policy"
path = "fuzz_targets/lower_policy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lower_schema"
path = "fuzz_targets/lower_schema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_policy"
path = "fuzz_targets/parse_policy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_schema"
path = "fuzz_targets/parse_schema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "est_serde_json_policy"
path = "fuzz_targets/est_serde_json_policy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "est_serde_json_schema"
path = "fuzz_targets/est_serde_json_schema.rs"
test = false
doc = false
bench = false
