[package]
name = "duramen-fuzz"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
duramen = { workspace = true }
duramen-test = { workspace = true }

# Fuzzing
libfuzzer-sys = { workspace = true, features = ["link_libfuzzer"] }
