[package]
name = "duramen-fuzz"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
duramen = { workspace = true }
duramen-test = { workspace = true }

# Fuzzing
libfuzzer-sys = { workspace = true, features = ["link_libfuzzer"] }

[[bin]]
name = "lexer"
path = "fuzz_targets/lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "escape"
path = "fuzz_targets/escape.rs"
test = false
doc = false
bench = false
