[package]
name = "duramen-xtask"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Grammar
ungrammar = { workspace = true }

# Code Generation
quote = { workspace = true }
syn = { workspace = true, features = ["parsing", "full"] }
prettyplease = { workspace = true }

# Text
heck = { workspace = true }
