[package]
name = "duramen-diagnostics"
description = "Duramen diagnostic types and rendering"
include = ["/src"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["annotate-snippets/std"]

[dependencies]
# Rendering
annotate-snippets = { workspace = true }
