[package]
name = "duramen-escape"
description = "Duramen Escape"
include = ["/src", "/README.md", "/LICENSE-MIT", "/LICENSE-APACHE"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["memchr/std"]

[dependencies]
duramen-ast = { workspace = true }
duramen-diagnostic = { workspace = true }

# SIMD
memchr = { workspace = true }

[dev-dependencies]
duramen-test = { workspace = true }

# Benchmarking
divan = { workspace = true }

[[bench]]
name = "escape"
harness = false
