[package]
name = "duramen-est"
description = "Duramen EST (External Syntax Tree)"
include = ["/src"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["duramen-ast/std", "serde?/std"]
serde = ["dep:serde"]

[dependencies]
duramen-ast = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
duramen-lower = { workspace = true }
duramen-parser = { workspace = true }
duramen-test = { workspace = true }

# Upstream
cedar-policy = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Benchmarking
divan = { workspace = true }

[[test]]
name = "serde_differential"
harness = false
required-features = ["serde"]

[[bench]]
name = "serde_corpus"
harness = false
required-features = ["serde"]
