[package]
name = "duramen-lexer"
description = "Duramen lexer"
include = ["/src"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["memchr/std"]

[dependencies]
# SIMD
memchr = { workspace = true }

[dev-dependencies]
# Benchmarking
divan = { workspace = true }

# RNG
rand = { workspace = true }

[[bench]]
name = "throughput"
harness = false
