[package]
name = "duramen-lower"
description = "Duramen CST to AST lowering"
include = ["/src"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []

[dependencies]
duramen-ast = { workspace = true }
duramen-cst = { workspace = true }
duramen-diagnostics = { workspace = true }

[dev-dependencies]
duramen-parser = { workspace = true }
duramen-test = { workspace = true }

# Testing
datatest-stable = { workspace = true }

# Benchmarking
divan = { workspace = true }

# RNG
rand = { workspace = true }

[[test]]
name = "corpus"
harness = false

[[bench]]
name = "corpus"
harness = false

[[bench]]
name = "unescape"
harness = false
