[package]
name = "duramen-lowerer"
description = "Duramen Lowerer"
include = ["/src", "/README.md", "/LICENSE-MIT", "/LICENSE-APACHE"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
  "duramen-ast/std",
  "duramen-cst/std",
  "duramen-diagnostic/std",
  "duramen-escape/std",
  "duramen-syntax/std",
]

[dependencies]
duramen-ast = { workspace = true }
duramen-cst = { workspace = true }
duramen-diagnostic = { workspace = true }
duramen-escape = { workspace = true }
duramen-syntax = { workspace = true }

[dev-dependencies]
duramen-parser = { workspace = true }
duramen-test = { workspace = true }

# Benchmarking
divan = { workspace = true }

[[test]]
name = "corpus"
harness = false

[[test]]
name = "upstream_parser_policy"
harness = false

[[bench]]
name = "corpus"
harness = false
