[package]
name = "duramen-parser"
description = "Duramen parser"
include = ["/src"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["duramen-cst/std", "duramen-diagnostics/std", "duramen-lexer/std"]

[dependencies]
duramen-cst = { workspace = true }
duramen-diagnostics = { workspace = true }
duramen-lexer = { workspace = true }
