[package]
name = "duramen-parser"
description = "Duramen parser"
include = ["/src"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["duramen-cst/std", "duramen-lexer/std"]

[dependencies]
duramen-cst = { workspace = true }
duramen-lexer = { workspace = true }

[dev-dependencies]
duramen-test = { workspace = true }

# Benchmarking
divan = { workspace = true }

[[test]]
name = "corpus"
harness = false

[[bench]]
name = "corpus"
harness = false
