[package]
name = "duramen-parser"
description = "Duramen Parser"
include = ["/src", "/README.md", "/LICENSE-MIT", "/LICENSE-APACHE"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
  "duramen-diagnostic/std",
  "duramen-lexer/std",
  "duramen-syntax/std",
]

[dependencies]
duramen-diagnostic = { workspace = true }
duramen-lexer = { workspace = true }
duramen-syntax = { workspace = true }

[dev-dependencies]
duramen-test = { workspace = true }

# Benchmarking
divan = { workspace = true }

[[test]]
name = "corpus"
harness = false

[[test]]
name = "upstream_policy"
harness = false

[[bench]]
name = "corpus"
harness = false
