[package]
name = "duramen-test"
description = "Duramen Test"
include = ["/src", "/README.md", "/LICENSE-MIT", "/LICENSE-APACHE"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
duramen-diagnostic = { workspace = true }

# Testing
anstream = { workspace = true }
datatest-stable = { workspace = true }
indoc = { workspace = true }
insta = { workspace = true }
similar-asserts = { workspace = true }
walkdir = { workspace = true }
