[package]
name = "duramen-validator"
description = "Duramen validator"
include = ["/src"]
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["duramen-ast/std", "duramen-diagnostics/std"]

[dependencies]
duramen-ast = { workspace = true }
duramen-diagnostics = { workspace = true }
